# mvp_100725_backend

./: .gitignore  README.md  Refactoring_Plan.md  canonical_dict.json  config.yml  pyproject.toml
Lambda/: orchestrator.js  package-lock.json  package.json  session.js  validate.js
Lambda/clean-data/: index.py  requirements.txt
Lambda/get-data-preview/: index.js  package-lock.json  package.json
Lambda/get-dataset-status/: index.js  package-lock.json  package.json
Lambda/list-datasets/: index.js  package-lock.json  package.json
Lambda/map-schema/: index.py  requirements.txt
Lambda/save-data/: index.py
Lambda/update-status/: index.py
Lambda/upload-initiator/: index.js  package-lock.json  package.json
app/: document_parser.py  graph.py  langgraph_planner.py  main.py  planner_agent.py
connect/: __main__.py  canonical_mapper.py  schema_crawler.py
tests/: test_document_parser.py  test_graph.py  test_langgraph_planner.py  test_main.py  test_optimization.py  test_planner_agent.py  test_scm.py  test_simulation.py
